applications/jenkins-cn-north4-2/deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  template:
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        openeuler.ci/task: common
      containers:
        - name: jenkins
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/jenkins:lts
          resources:
            limits:
              cpu: 64000m
              memory: 100000Mi
            requests:
              cpu: 6000m
              memory: 16000Mi
