applications/jenkins-cn-north4-2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: jenkins-cn-north4-2-ingress
spec:
  tls:
    - hosts:
        - openeulerjenkins.osinfra.cn
      secretName: jenkins-cn-north4-tls
  rules:
    - host:  openeulerjenkins.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /
