applications/jenkins-cn-north4-2/openeuler-ci.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openeuler-ci-ingress
  namespace: jenkins
spec:
  tls:
    - hosts:
        - openeuler-ci.osinfra.cn
      secretName: openeuler-ci-tls
  rules:
    - host: openeuler-ci.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: openeuler-ci-service
              servicePort: 80
            path: /

---
apiVersion: v1
kind: Service
metadata:
  name: openeuler-ci-service
  namespace: jenkins
spec:
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: openeuler-ci
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openeuler-ci
  namespace: jenkins
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: openeuler-ci
  template:
    metadata:
      labels:
        app: openeuler-ci
    spec:
      containers:
      - name: openeuler-ci
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-ci:9439eb4ed38cbf2a1e12f08fabfbb2dcfd656191
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
